--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+  background-color: #f0f2f5;
+}
+
+.App header {
+  background-color: #282c34;
+  padding: 20px;
   color: white;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
-.App-link {
-  color: #61dafb;
+.App main {
+  flex-grow: 1;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 350px 1fr; /* Give the first column a fixed width */
+  grid-template-rows: auto auto 1fr; /* Allow the last row to take remaining space */
+  gap: 20px;
+  grid-template-areas:
+    "form map"
+    "search map"
+    "deflect map"
+    "results map";
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-status {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: #282c34;
 }
