--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #f0f2f5;
+  background: url("");
+
 }
 
 .App header {
