--- a/frontend/src/css/MapLegend.css
+++ b/frontend/src/css/MapLegend.css
@@ -5,16 +5,17 @@
   background: rgba(255, 255, 255, 0.9);
   padding: 10px 15px;
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(225, 222, 222, 0.2);
   z-index: 1000; /* Ensures it's on top of map tiles */
   line-height: 22px;
-  color: #333;
+  color: #ffffff;
   font-size: 14px;
 }
 
 .legend h4 {
   margin: 0 0 8px 0;
   text-align: center;
+  color: white;
 }
 
 .legend i {
@@ -24,4 +25,5 @@
   margin-right: 8px;
   border-radius: 50%;
   opacity: 0.7;
+  color: white;
 }
